# awale

./: CMakeLists.txt  README.md
src/: ia.cpp  ia.h  in_out.cpp  in_out.h  in_out_sdl.cpp  in_out_sdl.h  main.cpp  regles_jeux.cpp  regles_jeux.h  reseau.cpp  reseau.h  type.cpp  type.h
src/fmod/: common.cpp  common.h  common_platform.cpp  common_platform.h
